<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="notice_room_invite_no_invitee">%s </string>
    <string name="notice_room_invite">%1$s  %2$s</string>
    <string name="notice_room_invite_you">%1$s </string>
    <string name="notice_room_join">%1$s </string>
    <string name="notice_room_leave">%1$s </string>
    <string name="notice_room_reject">%1$s </string>
    <string name="notice_room_remove">%1$s  %2$s</string>
    <string name="notice_room_unban">%1$s  %2$s</string>
    <string name="notice_room_ban">%1$s  %2$s</string>
    <string name="notice_avatar_url_changed">%1$s </string>
    <string name="notice_display_name_set">%1$s  %2$s</string>
    <string name="notice_display_name_changed_from">%1$s  %2$s  %3$s</string>
    <string name="notice_display_name_removed">%1$s  (%2$s)</string>
    <string name="notice_room_topic_changed">%1$s ： %2$s</string>
    <string name="notice_room_name_changed">%1$s ： %2$s</string>
    <string name="notice_placed_video_call">%s 。</string>
    <string name="notice_placed_voice_call">%s 。</string>
    <string name="notice_answered_call">%s 。</string>
    <string name="notice_ended_call">%s 。</string>
    <string name="notice_room_visibility_invited">，。</string>
    <string name="notice_room_visibility_joined">，。</string>
    <string name="notice_room_visibility_shared">。</string>
    <string name="notice_room_visibility_world_readable">。</string>
    <string name="notice_avatar_changed_too">（）</string>
    <string name="notice_room_name_removed">%1$s </string>
    <string name="notice_room_topic_removed">%1$s </string>
    <string name="notice_crypto_unable_to_decrypt">** ：%s **</string>
    <string name="notice_crypto_error_unknown_inbound_session_id">。</string>
    <string name="unable_to_send_message"></string>
    <string name="matrix_error">Matrix </string>
    <string name="medium_email"></string>
    <string name="medium_phone_number"></string>
    <string name="notice_room_withdraw">%1$s  %2$s </string>
    <string name="notice_made_future_room_visibility">%1$s  %2$s </string>
    <string name="notice_room_third_party_invite">%1$s  %2$s </string>
    <string name="notice_room_third_party_registered_invite">%1$s  %2$s </string>
    <string name="room_displayname_empty_room"></string>
    <string name="room_displayname_room_invite"></string>
    <string name="room_displayname_two_members">%1$s  %2$s</string>
    <string name="initial_sync_start_importing_account">：
\n…</string>
    <string name="initial_sync_start_importing_account_crypto">：
\n</string>
    <string name="initial_sync_start_importing_account_rooms">：
\n</string>
    <string name="initial_sync_start_importing_account_joined_rooms">：
\n
\n，</string>
    <string name="initial_sync_start_importing_account_invited_rooms">：
\n</string>
    <string name="initial_sync_start_importing_account_left_rooms">：
\n</string>
    <string name="initial_sync_start_importing_account_groups">：
\n</string>
    <string name="initial_sync_start_importing_account_data">：
\n</string>
    <string name="notice_room_update">%s 。</string>
    <string name="event_status_sending_message">…</string>
    <string name="notice_room_third_party_revoked_invite">%1$s  %2$s </string>
    <string name="notice_room_invite_no_invitee_with_reason">%1$s 。：%2$s</string>
    <string name="notice_room_invite_with_reason">%1$s  %2$s。：%3$s</string>
    <string name="notice_room_invite_you_with_reason">%1$s 。：%2$s</string>
    <string name="notice_room_join_with_reason">%1$s 。：%2$s</string>
    <string name="notice_room_leave_with_reason">%1$s 。：%2$s</string>
    <string name="notice_room_reject_with_reason">%1$s 。：%2$s</string>
    <string name="notice_room_remove_with_reason">%1$s  %2$s。：%3$s</string>
    <string name="notice_room_unban_with_reason">%1$s  %2$s。：%3$s</string>
    <string name="notice_room_ban_with_reason">%1$s  %2$s。：%3$s</string>
    <string name="notice_room_third_party_registered_invite_with_reason">%1$s  %2$s 。：%3$s</string>
    <string name="notice_room_withdraw_with_reason">%1$s  %2$s 。：%3$s</string>
    <plurals name="notice_room_aliases_added">
        <item quantity="other">%1$s  %2$s 。</item>
    </plurals>
    <plurals name="notice_room_aliases_removed">
        <item quantity="other">%1$s  %2$s 。</item>
    </plurals>
    <string name="notice_room_aliases_added_and_removed">%1$s  %2$s  %3$s 。</string>
    <string name="notice_room_canonical_alias_set">%1$s  %2$s。</string>
    <string name="notice_room_canonical_alias_unset">%1$s 。</string>
    <string name="notice_room_guest_access_can_join">%1$s 。</string>
    <string name="notice_room_guest_access_forbidden">%1$s 。</string>
    <string name="notice_end_to_end_ok">%1$s 。</string>
    <string name="notice_end_to_end_unknown_algorithm">%1$s （ %2$s）。</string>
    <string name="notice_room_created">%1$s </string>
    <string name="notice_room_invite_no_invitee_by_you"></string>
    <string name="notice_room_created_by_you"></string>
    <string name="notice_room_invite_by_you"> %1$s</string>
    <string name="notice_room_join_by_you"></string>
    <string name="notice_room_leave_by_you"></string>
    <string name="notice_room_reject_by_you"></string>
    <string name="notice_room_remove_by_you"> %1$s</string>
    <string name="notice_room_unban_by_you"> %1$s</string>
    <string name="notice_room_ban_by_you"> %1$s</string>
    <string name="notice_room_withdraw_by_you"> %1$s </string>
    <string name="notice_avatar_url_changed_by_you"></string>
    <string name="notice_display_name_set_by_you"> %1$s</string>
    <string name="notice_display_name_changed_from_by_you"> %1$s  %2$s</string>
    <string name="notice_display_name_removed_by_you"> (%1$s)</string>
    <string name="notice_room_topic_changed_by_you">：%1$s</string>
    <string name="notice_room_avatar_changed">%1$s </string>
    <string name="notice_room_avatar_changed_by_you"></string>
    <string name="notice_room_name_changed_by_you">：%1$s</string>
    <string name="notice_placed_video_call_by_you">。</string>
    <string name="notice_placed_voice_call_by_you">。</string>
    <string name="notice_call_candidates">%s 。</string>
    <string name="notice_call_candidates_by_you">。</string>
    <string name="notice_answered_call_by_you">。</string>
    <string name="notice_ended_call_by_you">。</string>
    <string name="notice_made_future_room_visibility_by_you"> %1$s </string>
    <string name="notice_room_update_by_you">。</string>
    <string name="notice_room_name_removed_by_you"></string>
    <string name="notice_room_topic_removed_by_you"></string>
    <string name="notice_room_avatar_removed">%1$s </string>
    <string name="notice_room_avatar_removed_by_you"></string>
    <string name="notice_room_third_party_invite_by_you"> %1$s </string>
    <string name="notice_room_third_party_revoked_invite_by_you"> %1$s </string>
    <string name="notice_room_third_party_registered_invite_by_you"> %1$s </string>
    <string name="notice_widget_added">%1$s  %2$s </string>
    <string name="notice_widget_added_by_you"> %1$s </string>
    <string name="notice_widget_removed">%1$s  %2$s </string>
    <string name="notice_widget_removed_by_you"> %1$s </string>
    <string name="notice_widget_modified">%1$s  %2$s </string>
    <string name="notice_widget_modified_by_you"> %1$s </string>
    <string name="power_level_admin"></string>
    <string name="power_level_moderator"></string>
    <string name="power_level_default"></string>
    <string name="power_level_custom">（%1$d）</string>
    <string name="power_level_custom_no_value"></string>
    <string name="notice_power_level_changed_by_you">%1$s 。</string>
    <string name="notice_power_level_changed">%1$s  %2$s 。</string>
    <string name="notice_power_level_diff">%1$s  %2$s  %3$s</string>
    <string name="notice_room_invite_no_invitee_with_reason_by_you">。：%1$s</string>
    <string name="notice_room_invite_with_reason_by_you"> %1$s。：%2$s</string>
    <string name="notice_room_join_with_reason_by_you">。：%1$s</string>
    <string name="notice_room_leave_with_reason_by_you">。：%1$s</string>
    <string name="notice_room_reject_with_reason_by_you">。：%1$s</string>
    <string name="notice_room_remove_with_reason_by_you"> %1$s。：%2$s</string>
    <string name="notice_room_unban_with_reason_by_you"> %1$s。：%2$s</string>
    <string name="notice_room_ban_with_reason_by_you"> %1$s。：%2$s</string>
    <string name="notice_room_third_party_registered_invite_with_reason_by_you"> %1$s 。：%2$s</string>
    <string name="notice_room_withdraw_with_reason_by_you"> %1$s 。：%2$s</string>
    <plurals name="notice_room_aliases_added_by_you">
        <item quantity="other"> %1$s 。</item>
    </plurals>
    <plurals name="notice_room_aliases_removed_by_you">
        <item quantity="other"> %1$s 。</item>
    </plurals>
    <string name="notice_room_aliases_added_and_removed_by_you"> %1$s  %2$s 。</string>
    <string name="notice_room_canonical_alias_set_by_you"> %1$s。</string>
    <string name="notice_room_canonical_alias_unset_by_you">。</string>
    <string name="notice_room_guest_access_can_join_by_you">。</string>
    <string name="notice_room_guest_access_forbidden_by_you">。</string>
    <string name="notice_end_to_end_ok_by_you">。</string>
    <string name="notice_end_to_end_unknown_algorithm_by_you">（ %1$s）。</string>
    <string name="notice_direct_room_leave_with_reason_by_you">。：%1$s</string>
    <string name="notice_direct_room_leave_with_reason">%1$s 。：%2$s</string>
    <string name="notice_direct_room_join_with_reason_by_you">。：%1$s</string>
    <string name="notice_direct_room_join_with_reason">%1$s 。：%2$s</string>
    <string name="notice_direct_room_third_party_revoked_invite_by_you"> %1$s </string>
    <string name="notice_direct_room_third_party_revoked_invite">%1$s  %2$s </string>
    <string name="notice_direct_room_third_party_invite_by_you"> %1$s</string>
    <string name="notice_direct_room_third_party_invite">%1$s  %2$s</string>
    <string name="notice_direct_room_update_by_you">。</string>
    <string name="notice_direct_room_update">%s 。</string>
    <string name="notice_made_future_direct_room_visibility_by_you"> %1$s </string>
    <string name="notice_made_future_direct_room_visibility">%1$s  %2$s </string>
    <string name="notice_direct_room_leave_by_you"></string>
    <string name="send_bug_report"></string>
    <string name="home_filter_placeholder_home"></string>
    <string name="send_suggestion"></string>
    <string name="a11y_create_direct_message"></string>
    <string name="a11y_create_room"></string>
    <string name="settings"></string>
    <string name="a11y_delete_avatar"></string>
    <string name="a11y_change_avatar"></string>
    <string name="menu_home_qr"></string>
    <string name="menu_home_scan"></string>
    <string name="notice_settings"></string>
    <string name="buy_dvm_success_anim_tips1"></string>
    <string name="buy_dvm_success_anim_tips2">DVM</string>
    <string name="buy_dvm_success_anim_bt"></string>
    <string name="buy_dvm_success_anim_tips4"></string>
    <string name="buy_dvm_success_anim_tips3"></string>
    <string name="cluster_create_name"></string>
    <string name="cluster_create_name_hint"></string>
    <string name="cluster_create_topic">（）</string>
    <string name="cluster_create_topic_hint"></string>
    <string name="cluster_create_right"></string>
    <string name="cluster_create_right_person"></string>
    <string name="cluster_create_right_person_tips"></string>
    <string name="cluster_create_create"></string>
    <string name="cluster_create_note"></string>
    <string name="enter_anim_tips1" translatable="false">、、、</string>
    <string name="enter_anim_tips2" translatable="false">DAO</string>
    <string name="enter_anim_tips31" translatable="false"></string>
    <string name="enter_anim_tips32" translatable="false">0</string>
    <string name="enter_anim_bt" translatable="false"></string>
    <string name="migrate_tips">，，DVM。</string>
</resources>