<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_home_create_chat_room"
        android:icon="@drawable/ic_fab_add_chat"
        android:title="@string/a11y_create_direct_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_home_create_group_room"
        android:icon="@drawable/ic_fab_add_room"
        android:title="@string/a11y_create_room"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_qr"
        android:icon="@drawable/ic_fab_add_room"
        android:title="@string/menu_home_qr"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_scan"
        android:icon="@drawable/ic_fab_add_room"
        android:title="@string/menu_home_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_setting"
        android:icon="@drawable/ic_settings_x"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_notice_setting"
        android:icon="@drawable/ic_settings_x"
        android:title="@string/notice_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_suggestion"
        android:icon="@drawable/ic_material_bug_report"
        android:title="@string/send_suggestion" />

    <item
        android:id="@+id/menu_home_report_bug"
        android:icon="@drawable/ic_material_bug_report"
        android:title="@string/send_bug_report" />

    <item
        android:id="@+id/menu_home_init_sync_legacy"
        android:title="Do a legacy init sync"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/menu_home_init_sync_optimized"
        android:title="Do an optimized init sync"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/menu_home_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/home_filter_placeholder_home"
        app:iconTint="?vctr_content_secondary"
        app:showAsAction="always" />

</menu>
