<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:clipChildren="false">

        <ImageView
            android:id="@+id/buyDvmSuccessAnimImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:0.72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipChildren="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/buyDvmSuccessAnimTips1"
            style="@style/anim_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:text="@string/buy_dvm_success_anim_tips1"
            android:textColor="#ff48e98f"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:alpha="1" />

        <TextView
            android:id="@+id/buyDvmSuccessAnimTips2"
            style="@style/anim_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:includeFontPadding="false"
            android:text="@string/buy_dvm_success_anim_tips2"
            android:textColor="#DBD819"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:alpha="1" />

        <TextView
            android:id="@+id/buyDvmSuccessAnimTips3"
            style="@style/anim_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:lineSpacingExtra="3dp"
            android:textColor="#ff0bbd8b"
            android:textSize="15sp"
            tools:alpha="1"
            tools:text="@string/buy_dvm_success_anim_tips3" />

        <TextView
            android:id="@+id/buyDvmSuccessAnimTips4"
            style="@style/anim_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:lineSpacingExtra="3dp"
            android:textColor="#ff0bbd8b"
            android:textSize="15sp"
            tools:alpha="1"
            tools:text="@string/buy_dvm_success_anim_tips4" />
    </LinearLayout>


    <TextView
        android:id="@+id/buyDvmSuccessAnimBt"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="70dp"
        android:alpha="0"
        android:background="@drawable/bg_enter_bt"
        android:gravity="center"
        android:text="@string/buy_dvm_success_anim_bt"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:alpha="1" />
</LinearLayout>